# manifold_calibration

./: CMakeLists.txt  README.md  package.xml
include/: conversions.h  kinematics.h  solver.h
launch/: calibration.launch
src/: calibration.cpp  conversions.cpp  kinematics.cpp  solver.cpp
